finished home and team page

--- a/source/team.html.erb
+++ b/source/team.html.erb
@@ -1,4 +1,4 @@
-<ul class="list-inline text-center">
+<ul class="list-inline text-center padded">
   <% ["justine", "jc"].each do |member| %>
     <li>
       <%= image_tag "#{member}.jpg", class: "img-circle avatar-huge-bordered" %>
