Add CSS for colors and fonts and over-ride Bootstrap theme

--- a/source/stylesheets/config/_variables.css.scss
+++ b/source/stylesheets/config/_variables.css.scss
@@ -2,9 +2,9 @@
  * Fonts
  * ------------------------------------- */
 // Google fonts
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700");
-$base-font: "Open Sans", "Helvetica", "sans-serif";
-$header-font: "Montserrat", "sans-serif";
+@import url("http://fonts.googleapis.com/css?family=Catamaran:300,400,700|Varela+Round");
+$base-font: 'Catamaran', "Helvetica", "sans-serif";
+$header-font: 'Varela Round', sans-serif;
 
 // Local fonts (uncomment following lines)
 // @font-face {
@@ -24,12 +24,12 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$purple: #6452BD;
+$red: #C73E1D;
+$blue: #006281;
+$yellow: #DAF200;
+$orange: #F18F01;
+$green: #D6FFF6;
+$purple: #A23B72;
 
 // Gray scale
 $gray-darker:  lighten(#000, 13.5%); // #222
