--- a/source/stylesheets/components/_avatar.css.scss
+++ b/source/stylesheets/components/_avatar.css.scss
@@ -10,17 +10,17 @@
   width: 100px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: $red 4px solid;
 }
-.avatar-bordered {
+.avatar-bordeblue {
   width: 30px;
   border-radius: 50%;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: $red 4px solid;
 }
 .avatar-square {
   width: 30px;
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  border: $red 4px solid;
 }
